network/simple/template.yml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: Simple NW Stack

Parameters:
  Env:
    Type: String

  VpcCidrBlock:
    Type: String
    Default: 192.168.0.0/16

  FrontendSubnet1CidrBlock:
    Type: String
    Default: 192.168.0.0/24

  FrontendSubnet2CidrBlock:
    Type: String
    Default: 192.168.1.0/24

  ApplicationSubnet1CidrBlock:
    Type: String
    Default: 192.168.100.0/24

  ApplicationSubnet2CidrBlock:
    Type: String
    Default: 192.168.101.0/24

  DatastoreSubnet1CidrBlock:
    Type: String
    Default: 192.168.200.0/24

  DatastoreSubnet2CidrBlock:
    Type: String
    Default: 192.168.201.0/24

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub vpc-${Env}

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  FrontendRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub frontend-subnet-rtb-${Env}

  FrontendRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref FrontendRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  ApplicationRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub application-subnet-rtb-${Env}

  ApplicationRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref ApplicationRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  DatastoreRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub datastore-subnet-rtb-${Env}

  FrontendSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
          - 0
          - Fn::GetAZs: !Ref AWS::Region
      CidrBlock: !Ref FrontendSubnet1CidrBlock
      Tags:
        - Key: Name
          Value: !Sub frontend-subnet-1-${Env}

  FrontendSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FrontendSubnet1
      RouteTableId: !Ref FrontendRouteTable

  FrontendSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
          - 1
          - Fn::GetAZs: !Ref AWS::Region
      CidrBlock: !Ref FrontendSubnet2CidrBlock
      Tags:
        - Key: Name
          Value: !Sub frontend-subnet-2-${Env}

  FrontendSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FrontendSubnet2
      RouteTableId: !Ref FrontendRouteTable

  ApplicationSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
          - 0
          - Fn::GetAZs: !Ref AWS::Region
      CidrBlock: !Ref ApplicationSubnet1CidrBlock
      Tags:
        - Key: Name
          Value: !Sub application-subnet-1-${Env}

  ApplicationSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet1
      RouteTableId: !Ref ApplicationRouteTable

  ApplicationSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
          - 1
          - Fn::GetAZs: !Ref AWS::Region
      CidrBlock: !Ref ApplicationSubnet2CidrBlock
      Tags:
        - Key: Name
          Value: !Sub application-subnet-2-${Env}

  ApplicationSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet2
      RouteTableId: !Ref ApplicationRouteTable

  DatastoreSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
          - 0
          - Fn::GetAZs: !Ref AWS::Region
      CidrBlock: !Ref DatastoreSubnet1CidrBlock
      Tags:
        - Key: Name
          Value: !Sub datastore-subnet-1-${Env}

  DatastoreSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DatastoreSubnet1
      RouteTableId: !Ref DatastoreRouteTable

  DatastoreSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select
          - 1
          - Fn::GetAZs: !Ref AWS::Region
      CidrBlock: !Ref DatastoreSubnet2CidrBlock
      Tags:
        - Key: Name
          Value: !Sub datastore-subnet-2-${Env}

  DatastoreSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DatastoreSubnet2
      RouteTableId: !Ref DatastoreRouteTable

Outputs:
  VpcId:
    Value: !Ref Vpc
    Export:
      Name: !Sub ${AWS::StackName}-VpcId

  VpcCidrBlock:
    Value: !GetAtt Vpc.CidrBlock
    Export:
      Name: !Sub ${AWS::StackName}-VpcCidrBlock

  FrontendSubnet1Id:
    Value: !Ref FrontendSubnet1
    Export:
      Name: !Sub ${AWS::StackName}-FrontendSubnet1Id

  FrontendSubnet2Id:
    Value: !Ref FrontendSubnet2
    Export:
      Name: !Sub ${AWS::StackName}-FrontendSubnet2Id

  ApplicationSubnet1Id:
    Value: !Ref ApplicationSubnet1
    Export:
      Name: !Sub ${AWS::StackName}-ApplicationSubnet1Id

  ApplicationSubnet2Id:
    Value: !Ref ApplicationSubnet2
    Export:
      Name: !Sub ${AWS::StackName}-ApplicationSubnet2Id

  DatastoreSubnet1Id:
    Value: !Ref DatastoreSubnet1
    Export:
      Name: !Sub ${AWS::StackName}-DatastoreSubnet1Id

  DatastoreSubnet2Id:
    Value: !Ref DatastoreSubnet2
    Export:
      Name: !Sub ${AWS::StackName}-DatastoreSubnet2Id
